# LLVManim

./: .clang-format  .clang-tidy  .double_1.dot  .gitignore  .importlinter  .init.dot  .main.dot  Makefile  README.md  TODO.md  double.c  double.ll  double.ll.callgraph.dot  doubletest  llvmanim.yaml  llvmparser.py  main.py  manimgl_scenes.py  ophandlers.py  plan-cfgSidecarDomtreeLoopRuntimeOverlay.md  pyproject.toml  pyrightconfig.json  run.sh  xray
.github/prompts/: plan-cfgSidecarDomtreeLoopRuntimeOverlay.prompt.md
.github/workflows/: ci.yml
docs/architecture/: 01_architecture_overview.dot  02_stack_animation_flow.dot  03_cfg_animation_flow.dot  04_data_model.dot  05_cli_dispatch.dot  render.sh
docs/metrics/: generate_metrics.py  generate_perf_metrics.py
llvmanim_out/: cfg_main  cfg_main.dot  scene_graph.json  trace_main.json
sandbox/manim_CE/: cfg_traversal.py  example_scenes.py  register_panel_demo.py  stack_demo.py
scripts/: export-architecture-svgs.sh  export-vertical-svgs.sh  quality-check.sh
src/llvmanim/: __init__.py  __main__.py
tests/: conftest.py  test_entrypoints.py  test_pipeline.py
tests/cli/: test_main.py  test_main_import_fallback.py
tests/ingest/: test_analysis_metadata_io.py  test_cfg_edge_io.py  test_display_lines.py  test_dot_layout.py  test_llvm_events.py  test_trace_io.py
tests/present/: test_animation_scene.py  test_cfg_animation_scene.py  test_command_driven_scene.py  test_exports.py  test_manim_stack.py  test_render_stack_model.py  test_rich_stack_scene_helpers.py  test_rich_stack_scene_ssa.py  test_scene_builder.py  (+2 more)
(+97 files in other folders)
