[project]
name = "llvmanim"
version = "0.0.1"
description = "LLVM IR parsing and animation tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "llvmlite>=0.46.0",
    "manim>=0.20.1",
    "manimgl>=1.7.2",
]

[dependency-groups]
dev = [
    {include-group="lint"},
    {include-group="test"}
]
lint = [
    "import-linter>=2.11",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
llvmanim = "llvmanim.cli.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast deterministic tests with no external dependencies",
    "integration: tests that span multiple LLVManim layers",
    "contract: tests asserting behavior at external dependency boundaries",
    "e2e: end-to-end CLI or rendering workflows",
]

# RUFF
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]
ignore = [
    "E501",
]
[tool.ruff.lint.mccabe]
max-complexity = 60
[tool.ruff.lint.isort]
known-first-party = ["llvmanim"]

[tool.coverage.run]
source = ["llvmanim"]
